2004-03-06 15:50  sisoft

	* Changes, README, configure.in, debian/init.d, debian/rules,
	src/binkp.c, src/flaglex.l, src/tools.c, src/tty.c, src/tty.h:

	set rts/cts flow control for tty's on linux.
	fix directory tree creating.
	
2004-03-03 18:12  sisoft

	* src/flaglex.l, src/qcc.c, stuff/ftn:

	fix expressions binkp and tcp.
	
2004-02-27 02:55  sisoft

	* configure.in, src/aso.c, src/binkp.c, src/bso.c, src/config.c,
	src/daemon.c, src/emsi.c, src/flaglex.l, src/ftn.c, src/ftn.h,
	src/globals.c, src/hydra.c, src/janus.c, src/ls_zreceive.c,
	src/main.c, src/nodelist.c, src/protfm.c, src/qcc.c, src/qctl.c,
	src/queue.c, src/session.c, src/ver.c.in:

	remove compiler warnings under gcc3.
	fix segfault crash on some systems.
	
2004-02-23 04:02  sisoft

	* Changes, configure.in, qico.conf.sample, debian/copyright,
	src/binkp.c, src/config.c, src/flaglex.l:

	add short aliases for weekdays (su,mo,tu...).
	add aliases 'or','no[t]','xor','and' for same symbols (|!^&).
	add support for multiline breaking (line must end on " \").
	
2004-02-23 00:33  sisoft

	* Changes, TODO, qico.conf.sample, src/binkp.c, src/config.c,
	src/emsi.c, src/ftn.h, src/qcc.c, src/session.c, src/xmem.h:

	in qcc: fix crash on terminals wider 127 columns.
	fix unnecessary error '..too slow'.
	fix domains in binkp.
	add domain parts to addresses in emsi.
	truncate Changes file.
	TODO removed, as unusable.
	
2004-02-20 02:36  sisoft

	* Changes, FAQ, configure.in, qico.conf.sample, src/binkp.h,
	src/config.c, src/daemon.c, src/defs.h, src/flaglex.l, src/main.c,
	src/tools.h:

	fix config dumping.
	add keyword 'else'.
	add support for inline if-expressions.
	add alias 'addr' for expression 'address'.
	
2004-02-17 14:23  sisoft

	* src/: call.c, emsi.c, flagexp.y, flaglex.l:

	try to fix emsi.
	
2004-02-15 04:22  sisoft

	* Changes, qico.conf.sample, src/config.c, src/flagexp.y,
	src/flaglex.l, src/tools.c:

	fix some if-expressions.
	check expressions syntax on config read.